编写融合代码

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,7 +14,8 @@ add_executable(testServer testServer.cpp
         ../src/ringBuffer/RingBuffer.cpp
         ../src/log/Log.cpp
         ../src/server/ClientInfo.cpp
-        ../src/server/FusionServer.cpp)
+        ../src/server/FusionServer.cpp
+        ../src/merge/merge.cpp)
 target_link_libraries(testServer ${LIBS})
 redefine_file_macro(testServer)
 
