初步编写发送上层客户端代码，初步编写整体的融合端代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ set(SRC_DIRS src
         src/ringBuffer
         src/common
         src/server
+        src/client
         src/merge
         src/simpleini)
 
