增加交叉编译设置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,34 @@ function(redefine_file_macro targetname)
     endforeach ()
 endfunction()
 
+#根据实际情况设置
+#set(ARCH arm)
+#set(ARCH x86)
+set(ARCH arm64)
+
+if (${ARCH} STREQUAL arm)
+    set(CROSS_COMPILE /usr/local/raspberrypi/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian/bin/arm-linux-gnueabihf-)
+
+    set(CMAKE_C_COMPILER ${CROSS_COMPILE}gcc)
+    set(CMAKE_C_COMPILER_AR ${CROSS_COMPILE}ar)
+    set(CMAKE_C_COMPILER_RANLIB ${CROSS_COMPILE}ranlib)
+    set(CMAKE_CXX_COMPILER ${CROSS_COMPILE}g++)
+endif ()
+
+if (${ARCH} STREQUAL arm64)
+    set(CROSS_COMPILE /usr/local/arm64/gcc-linaro-7.3.1-2018.05-x86_64_aarch64-linux-gnu/bin/aarch64-linux-gnu-)
+
+    set(CMAKE_C_COMPILER ${CROSS_COMPILE}gcc)
+    set(CMAKE_C_COMPILER_AR ${CROSS_COMPILE}ar)
+    set(CMAKE_C_COMPILER_RANLIB ${CROSS_COMPILE}ranlib)
+    set(CMAKE_CXX_COMPILER ${CROSS_COMPILE}g++)
+endif ()
+
+
+add_definitions(-D${ARCH})
+
+
+
 include_directories(include)
 include_directories(include/simpleini)
 
