增加上传输入量

--- a/log.conf
+++ b/log.conf
@@ -5,5 +5,5 @@ buffer max = 10MB
 rotate lock file = /tmp/zlog.RVDataFusionServer
 default format = "%d.%ms %V [%p:%F:%L] %m%n"
 [rules]
-*.*		"log/RVDataFusionServer-%d(%Y-%m-%d).log", 10MB ~ "log/RVDataFusionServer-%d(%Y-%m-%d).#2s.log"
+*.*		"z_log/RVDataFusionServer-%d(%Y-%m-%d).z_log", 10MB ~ "z_log/RVDataFusionServer-%d(%Y-%m-%d).#2s.z_log"
 log_conf.* >stdout;
