--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,8 @@ endfunction()
 
 #根据实际情况设置
 #set(ARCH arm)
-#set(ARCH x86)
-set(ARCH arm64)
+set(ARCH x86)
+#set(ARCH arm64)
 
 if (${ARCH} STREQUAL arm)
     set(CROSS_COMPILE /usr/local/raspberrypi/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian/bin/arm-linux-gnueabihf-)
@@ -60,7 +60,7 @@ set(SRC_DIRS ./
         ringBuffer
         common
         server
-        multiView
+        multiview
         client
         merge
         simpleini
