增加交通信号灯控制协议GBT20999-2017的大帧序列化与反序列化代码

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,3 +61,11 @@ redefine_file_macro(testTimeTask)
 
 add_executable(testTempClass testTempClass.cpp)
 target_link_libraries(testTempClass ${LIBS})
+
+##测试信号机通讯
+add_executable(testSingalControl testSingalControl.cpp
+        ../signalControl/signalControlCom.cpp
+        ../signalControl/SignalControl.cpp
+        ../common/CRC.cpp)
+target_link_libraries(testSingalControl ${LIBS})
+redefine_file_macro(testSingalControl)
