--- a/version.h.in
+++ b/version.h.in
@@ -6,5 +6,6 @@
 #cmakedefine PROJECT_VERSION_MAJOR "@CMAKE_PROJECT_VERSION_MAJOR@"
 #cmakedefine PROJECT_VERSION_MINOR "@CMAKE_PROJECT_VERSION_MINOR@"
 #cmakedefine PROJECT_VERSION_PATCH "@CMAKE_PROJECT_VERSION_PATCH@"
+#define VERSION_BUILD_TIME "@build_time@"
 
 #endif //_VERSION_H
