--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -55,7 +55,7 @@ add_executable(testFusionClient testFusionClient.cpp
 target_link_libraries(testFusionClient ${LIBS})
 redefine_file_macro(testFusionClient)
 add_executable(testTimeTask testTimeTask.cpp
-        ../timeTask.hpp)
+        ../os/timeTask.hpp)
 target_link_libraries(testTimeTask ${LIBS})
 redefine_file_macro(testTimeTask)
 
