以c11的codecvt替代iconv库

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ endif ()
 
 add_definitions(-D${ARCH})
 
-set(LIBS m pthread zlog jsoncpp sqlite3 ssl crypto curl iconv)
+set(LIBS m pthread zlog jsoncpp sqlite3 ssl crypto curl)
 
 set(SRC_DIRS ./
         log
