更改环形buffer为类，为内存安全考虑，更改TCP Server为类模板

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ set(LIBS m pthread zlog jsoncpp sqlite3 ssl crypto curl)
 
 set(SRC_DIRS .
         log
-        ringBuffer
+        ringbuffer
         common
         os
         monitor
