--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ add_definitions(-D${ARCH})
 set(LIBS m pthread zlog jsoncpp sqlite3 ssl crypto curl)
 
 set(SRC_DIRS .
+        unity
         log
         ringbuffer
         common
