增加编译后填写version文件内容,用来判断当前目标是否是最新

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,3 +109,4 @@ target_link_libraries(RVDataFusionServer ${LIBS})
 redefine_file_macro(RVDataFusionServer)
 
 add_subdirectory(test)
+add_custom_command(TARGET RVDataFusionServer POST_BUILD COMMAND echo ${COMPILE_TIME}>${CMAKE_BINARY_DIR}/version)
