--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,28 +84,26 @@ include_directories(.)
 include_directories(eoc_comm/utility)
 include_directories(eoc_comm)
 
+if (${ARCH} STREQUAL "x64")
+    include_directories(lib/x64)
+    file(GLOB allCopyFiles  "lib/x64/*")
+    file(COPY ${allCopyFiles} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib FOLLOW_SYMLINK_CHAIN)
+else ()
+    include_directories(lib/arm64)
+    file(GLOB allCopyFiles  "lib/arm64/*")
+    file(COPY ${allCopyFiles} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib FOLLOW_SYMLINK_CHAIN)
+endif ()
+link_directories(${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib)
+set(CMAKE_CXX_FLAGS "-Wl,-rpath=lib")
+
 set(SRC_FILES)
 foreach (src_dir ${SRC_DIRS})
     aux_source_directory(${src_dir} SRC_FILES)
 endforeach (src_dir)
 list(REMOVE_ITEM SRC_FILES ./main.cpp)
 
-
-if (${ARCH} STREQUAL "x64")
-    include_directories(lib/x64)
-    link_directories(lib/x64)
-else ()
-    include_directories(lib/arm64)
-    link_directories(lib/arm64)
-endif ()
-
-message(STATUS "3.7 SRC_FILES : ${SRC_FILES}")
 add_executable(RVDataFusionServer main.cpp ${SRC_FILES})
-if (${ARCH} STREQUAL "x64")
-    set_target_properties(RVDataFusionServer PROPERTIES LINK_FLAGS "-Wl,-rpath=./lib/x64/")
-else ()
-    set_target_properties(RVDataFusionServer PROPERTIES LINK_FLAGS "-Wl,-rpath=./lib/arm64/")
-endif ()
+
 target_link_libraries(RVDataFusionServer ${LIBS})
 redefine_file_macro(RVDataFusionServer)
 
