--- a/log.conf
+++ b/log.conf
@@ -6,4 +6,4 @@ rotate lock file = /tmp/zlog.RVDataFusionServer
 default format = "%d.%ms %V [%p:%F:%L] %m%n"
 [rules]
 *.* >stdout;
-log_conf.info		"z_log/RVDataFusionServer-%d(%Y-%m-%d).z_log", 10MB ~ "z_log/RVDataFusionServer-%d(%Y-%m-%d).#2s.z_log"
+log_conf.info		"RVDataFusionServer-%d(%Y-%m-%d).log", 10MB ~ "RVDataFusionServer-%d(%Y-%m-%d).#2s.log"
