--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.19)
-project(RVDataFusionServer VERSION 0.0.4)
+project(RVDataFusionServer VERSION 0.0.5)
 string(TIMESTAMP COMPILE_TIME ${CMAKE_PROJECT_VERSION}_%Y%m%d_%H.%M.%S)
 set(build_time ${COMPILE_TIME})
 configure_file("${PROJECT_SOURCE_DIR}/version.h.in" "${PROJECT_SOURCE_DIR}/version.h")
 
 set(CMAKE_CXX_STANDARD 11)
-set(-D${ARCH})
+add_definitions(-D${ARCH})
 # 引入Conan的CMake
 set(CONAN_DISABLE_CHECK_COMPILER 1)
 if (${ARCH} STREQUAL "x64")
@@ -86,11 +86,11 @@ include_directories(eoc_comm)
 
 if (${ARCH} STREQUAL "x64")
     include_directories(lib/x64)
-    file(GLOB allCopyFiles  "lib/x64/*")
+    file(GLOB allCopyFiles  "lib/x64/*.so" "lib/x64/*.so.*" "lib/x64/*.a")
     file(COPY ${allCopyFiles} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib FOLLOW_SYMLINK_CHAIN)
 else ()
     include_directories(lib/arm64)
-    file(GLOB allCopyFiles  "lib/arm64/*")
+    file(GLOB allCopyFiles  "lib/arm64/*.so" "lib/arm64/*.so.*" "lib/arm64/*.a")
     file(COPY ${allCopyFiles} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib FOLLOW_SYMLINK_CHAIN)
 endif ()
 link_directories(${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib)
