--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ include(CPM)
 
 set(LIBS m pthread ${CONAN_LIBS})
 
-set(filtration_dirlist cmake-build-debug cmake-build-release-aarch64 .idea .git conan lib test bakCode)
+set(filtration_dirlist cmake-build-debug cmake-build-release-aarch64 .idea .git conan lib test)
 SUBDIRLISTINCLUDE(SRC_DIRS ${CMAKE_SOURCE_DIR} 2 ${filtration_dirlist})
 message(STATUS "3.7 SRC_DIRS : ${SRC_DIRS}")
 include_directories(.)
@@ -33,11 +33,11 @@ include_directories(eoc_comm)
 
 if (${ARCH} STREQUAL "x64")
     include_directories(lib/x64)
-    file(GLOB allCopyFiles  "lib/x64/*.so" "lib/x64/*.so.*" "lib/x64/*.a")
+    file(GLOB allCopyFiles "lib/x64/*.so" "lib/x64/*.so.*" "lib/x64/*.a")
     file(COPY ${allCopyFiles} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib FOLLOW_SYMLINK_CHAIN)
 else ()
     include_directories(lib/arm64)
-    file(GLOB allCopyFiles  "lib/arm64/*.so" "lib/arm64/*.so.*" "lib/arm64/*.a")
+    file(GLOB allCopyFiles "lib/arm64/*.so" "lib/arm64/*.so.*" "lib/arm64/*.a")
     file(COPY ${allCopyFiles} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib FOLLOW_SYMLINK_CHAIN)
 endif ()
 link_directories(${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/lib)
