将通信帧中与协议不符的地方修改，测试接收命令

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,60 +1,60 @@
 list(TRANSFORM SRC_FILES PREPEND ../)
-##testIni
-add_executable(testIni testIni.cpp
-        ../simpleini/ConvertUTF.c
-        )
-target_link_libraries(testIni ${LIBS})
-redefine_file_macro(testIni)
+###testIni
+#add_executable(testIni testIni.cpp
+#        ../simpleini/ConvertUTF.c
+#        )
+#target_link_libraries(testIni ${LIBS})
+#redefine_file_macro(testIni)
 
 ##测试通讯
-add_executable(testCommon testCommon.cpp
-        ../common/common.cpp
-        ../common/CRC.cpp
-        ../ringbuffer/RingBuffer.cpp)
-target_link_libraries(testCommon ${LIBS})
-redefine_file_macro(testCommon)
+#add_executable(testCommon testCommon.cpp
+#        ../common/common.cpp
+#        ../common/CRC.cpp
+#        ../ringbuffer/RingBuffer.cpp)
+#target_link_libraries(testCommon ${LIBS})
+#redefine_file_macro(testCommon)
 
 ##测试服务端
 add_executable(testServer testServer.cpp ${SRC_FILES})
 target_link_libraries(testServer ${LIBS})
 redefine_file_macro(testServer)
 
-##测试客户端
-add_executable(testClient testClient.cpp
-        ../common/common.cpp
-        ../common/CRC.cpp
-        ../ringbuffer/RingBuffer.cpp
-        ../getData/GetData.cpp)
-target_link_libraries(testClient ${LIBS})
-redefine_file_macro(testClient)
-
-##testGetData
-add_executable(testGetData testGetData.cpp
-        ../getData/GetData.cpp)
-target_link_libraries(testGetData ${LIBS})
-redefine_file_macro(testGetData)
-
-##testGetData
-add_executable(testFusionClient testFusionClient.cpp
-        ../client/FusionClient.cpp
-        ../common/common.cpp
-        ../common/CRC.cpp
-        ../ringbuffer/RingBuffer.cpp
-        ../utility/utility.cpp)
-target_link_libraries(testFusionClient ${LIBS})
-redefine_file_macro(testFusionClient)
-add_executable(testTimeTask testTimeTask.cpp
-        ../os/timeTask.hpp)
-target_link_libraries(testTimeTask ${LIBS})
-redefine_file_macro(testTimeTask)
-
-add_executable(testTempClass testTempClass.cpp)
-target_link_libraries(testTempClass ${LIBS})
-
-##测试信号机通讯
-add_executable(testSingalControl testSingalControl.cpp
-        ../signalControl/signalControlCom.cpp
-        ../signalControl/SignalControl.cpp
-        ../common/CRC.cpp)
-target_link_libraries(testSingalControl ${LIBS})
-redefine_file_macro(testSingalControl)
+###测试客户端
+#add_executable(testClient testClient.cpp
+#        ../common/common.cpp
+#        ../common/CRC.cpp
+#        ../ringbuffer/RingBuffer.cpp
+#        ../getData/GetData.cpp)
+#target_link_libraries(testClient ${LIBS})
+#redefine_file_macro(testClient)
+#
+###testGetData
+#add_executable(testGetData testGetData.cpp
+#        ../getData/GetData.cpp)
+#target_link_libraries(testGetData ${LIBS})
+#redefine_file_macro(testGetData)
+#
+###testGetData
+#add_executable(testFusionClient testFusionClient.cpp
+#        ../client/FusionClient.cpp
+#        ../common/common.cpp
+#        ../common/CRC.cpp
+#        ../ringbuffer/RingBuffer.cpp
+#        ../utility/utility.cpp)
+#target_link_libraries(testFusionClient ${LIBS})
+#redefine_file_macro(testFusionClient)
+#add_executable(testTimeTask testTimeTask.cpp
+#        ../os/timeTask.hpp)
+#target_link_libraries(testTimeTask ${LIBS})
+#redefine_file_macro(testTimeTask)
+#
+#add_executable(testTempClass testTempClass.cpp)
+#target_link_libraries(testTempClass ${LIBS})
+#
+###测试信号机通讯
+#add_executable(testSingalControl testSingalControl.cpp
+#        ../signalControl/signalControlCom.cpp
+#        ../signalControl/SignalControl.cpp
+#        ../common/CRC.cpp)
+#target_link_libraries(testSingalControl ${LIBS})
+#redefine_file_macro(testSingalControl)
