--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ include(CPM)
 
 set(LIBS m pthread ${CONAN_LIBS})
 
-set(filtration_dirlist cmake-build-debug cmake-build-release-aarch64 .idea .git conan lib test)
+set(filtration_dirlist cmake-build-debug cmake-build-release-aarch64 .idea .git conan lib test nebulalink)
 SUBDIRLISTINCLUDE(SRC_DIRS ${CMAKE_SOURCE_DIR} 2 ${filtration_dirlist})
 message(STATUS "3.7 SRC_DIRS : ${SRC_DIRS}")
 include_directories(.)
@@ -53,5 +53,5 @@ add_executable(RVDataFusionServer main.cpp ${SRC_FILES})
 target_link_libraries(RVDataFusionServer ${LIBS})
 redefine_file_macro(RVDataFusionServer)
 
-#add_subdirectory(test)
-#add_custom_command(TARGET RVDataFusionServer POST_BUILD COMMAND echo ${COMPILE_TIME}>${CMAKE_BINARY_DIR}/version)
+add_subdirectory(test)
+add_custom_command(TARGET RVDataFusionServer POST_BUILD COMMAND echo ${COMPILE_TIME}>${CMAKE_BINARY_DIR}/version)
