--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,11 +21,7 @@ target_link_libraries(testServer ${LIBS})
 redefine_file_macro(testServer)
 
 ##测试客户端
-add_executable(testClient testClient.cpp
-        ../common/common.cpp
-        ../common/CRC.cpp
-        ../ringbuffer/RingBuffer.cpp
-        ../getData/GetData.cpp)
+add_executable(testClient testClient.cpp ${SRC_FILES})
 target_link_libraries(testClient ${LIBS})
 redefine_file_macro(testClient)
 #
